added refresh tweets functionality

--- a/client/index.html
+++ b/client/index.html
@@ -62,7 +62,10 @@
                 </div>
             </main>
             <aside id="twitter">
-                <h2 id="twitter-header">RECENT TWEETS</h2>
+                <div id="twitter-header">
+                    <h2>RECENT TWEETS</h2>
+                    <h2 id="refresh-tweets"><i class="fas fa-sync-alt"></i></h2>
+                </div>
                 <div id="twitter-loader">
                     <img src="loading.gif" alt="loading-spinner">
                 </div>
