loading spinner alt text removed

--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
             <main id="full-stats">
                 <div id="statistics">
                     <div id="stats-loader">
-                        <img src="loading.gif" alt="loading-spinner">
+                        <img src="loading.gif" alt="">
                     </div>
                     <div id="buttons">
                         <div class="stat-button"><button class="btn selected-button" id="total">TOTAL STATISTICS</button></div>
@@ -67,7 +67,7 @@
                     <h2 id="refresh-tweets"><i class="fas fa-sync-alt"></i></h2>
                 </div>
                 <div id="twitter-loader">
-                    <img src="loading.gif" alt="loading-spinner">
+                    <img src="loading.gif" alt="">
                 </div>
                 <div id="twitter-feed">
                 </div>
